--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,10 +1,9 @@
-
 header {
-    background: #bbb;
+    background: #BBB;
     padding: 20px 0;
 }
 
-.cabecalho{
+.cabecalho {
     position: relative;
     width: 940px;
     margin: 0 auto;
@@ -14,7 +13,6 @@ nav {
     position: absolute;
     top: 110px;
     right: 0;
-    border: 2px solid red;
 }
 
 nav li {
@@ -31,6 +29,52 @@ nav a {
 }
 
 nav a:hover {
-    color: #948b04;
+    color: #C78C19;
     text-decoration: underline;
+}
+
+.produtos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
+}
+
+.produtos li {
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000;
+    border-radius: 10px;
+}
+
+.produtos li:hover {
+    border-color: #C78C19;
+
+}
+
+.produtos li:active {
+    border-color: #088C19;
+}
+
+.produtos li:hover h2 {
+    font-size: 34px;
+}
+
+.produtos h2 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.produto-descricao {
+    font-size: 18px;
+}
+
+.produto-preco {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
 }
