--- a/css/produtos.css
+++ b/css/produtos.css
@@ -78,3 +78,13 @@ nav a:hover {
     font-weight: bold;
     margin-top: 10px;
 }
+footer{
+    text-align: center;
+    background-image: url(/img/bg.jpg);
+    padding: 40px 0;
+}
+.copyright{
+    color: #FFF;
+    font-size: 13px;
+    margin-top: 20px;
+}
