--- a/css/contato.css
+++ b/css/contato.css
@@ -1,25 +1,16 @@
-main {
-    width: 940px;
-    margin: 0 auto;
-}
-
 form {
     margin: 40px 0;
 }
 
-.input-padrao,
 form label,
 form legend {
     display: block;
-}
-
-form label,
-form legend {
     font-size: 20px;
     margin: 0 0 10px;
 }
 
 .input-padrao {
+    display: block;
     margin: 0 0 20px;
     padding: 10px 25px;
     width: 50%;
@@ -47,17 +38,41 @@ form legend {
     transform: scale(1.2);
 }
 
-table{
+table {
     margin: 20px 0 40px;
 }
 
-thead{
+thead {
     background: #555555;
-    color:  #FFF;
+    color: #FFF;
     font-weight: bold;
 }
 
-td, th{
+td,
+th {
     border: 1px solid #000;
-    padding:8px 15px;
+    padding: 8px 15px;
+}
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+
+@media screen and (max-width: 480px) {
+    .cabecalho {
+        width: 100%;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+
+    .input-padrao {
+        width: 45%;
+    }
 }
