--- a/css/home.css
+++ b/css/home.css
@@ -1,46 +1,119 @@
-.titulo-principal {
-    padding-left: 20px;
-}
-
 #banner {
     width: 100%;
-    border-radius: 5px;
+}
+
+.titulo-principal {
+    text-align: center;
+    font-size: 2em;
+    margin-bottom: 1em;
+    clear: left;
 }
 
 .principal {
-    background: #ccc;
-    padding: 30px;
-    text-align: center;
+    padding: 3em 0;
+    background: #fefefe;
+    width: 940px;
+    margin: 0 auto;
 }
 
-.titulo-centralizado {
-    text-align: center;
+.principal p {
+    margin: 0 0 1em;
+    width: 940px;
+    margin: 0 auto;
 }
 
-#missao {
-    font-size: 20px;
+.principal strong {
+    font-weight: bold;
 }
 
-em strong {
-    color: #ff0000;
-}
-
-.beneficios {
-    padding: 20px;
-}
-
-ul {
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
-}
-
-.itens {
+.principal em {
     font-style: italic;
 }
 
-#imagembeneficios {
-    width: 50%;
-    border-radius: 5px;
+.utensilios {
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+}
+
+.mapa {
+    padding: 3em 0;
+    background: linear-gradient(#fefefe, #888888);
+}
+
+.mapa p {
+    margin-bottom: 2em;
+    text-align: center;
+}
+
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.beneficios {
+    padding: 3em 0;
+    background: #888888;
+}
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens {
+    line-height: 1.5em;
+}
+
+.itens:first-child {
+    font-weight: bold;
+}
+
+.itens::before {
+    content: "★";
+}
+
+.imagem-beneficios {
+    width: 60%;
+    opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 10px #000;
+}
+
+.imagem-beneficios:hover {
+    opacity: 0.3;
+}
+
+
+.video {
+    width: 560px;
+    margin: 2em auto;
+}
+
+@media screen and (max-width: 480px) {
+
+    .cabecalho,
+    .principal,
+    .conteudo-beneficios,
+    .mapa-conteudo,
+    .video {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+    .lista-beneficios, .imagem-beneficios{
+        width: 100%;
+    }
 }
