--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,20 @@ footer {
     font-size: 13px;
     margin-top: 20px;
 }
+
+@media screen and (max-width: 950px) {
+
+    .cabecalho,
+    .produtos {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+        text-align: center;
+    }
+}
